# utils-gui

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/css/: main.css
assets/js/: main.js
src/: index.html  main.rs  utils.rs
src/tools/: base64.rs  hash.rs  mod.rs
src/views/: mod.rs  tool_base64_decode.rs  tool_base64_encode.rs  tool_base64_hash.rs
