[package]
name = "utils"
version = "0.1.0"
authors = ["Thi Huynh <so61pi.re@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bitflags = "2.8.0"
clap = { version = "4.5.24", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
dioxus = { version = "0.6.2", features = ["router"] }
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
jiff = "0.1.28"
more-asserts = "0.3.1"
paste = "1.0.15"
pretty-hex = "0.4.1"
regex = "1.11.1"
scopeguard = "1.2.0"
serde = "1.0.217"
serde_json = "1.0.137"
strum = "0.26.3"
strum_macros = "0.26.3"
tokio = "1.43.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
